--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="container">
       <section id="a">
         <p class="p1">paragraf 1</p>
-        <a href="http://instagram.com/ahda_rizqi">Instagram Ahda Rziqi</a>
+        <a href="http://instagram.com/ahda_rizqi">Instagram Ahda Rizqi</a>
         <p class="p2">paragraf 2</p>
         <p class="p3">paragraf 3</p>
       </section>
@@ -40,6 +40,6 @@
       </section>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script3.js"></script>
   </body>
 </html>
